# fragments

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/backend-fastapi/service/: Makefile  alembic.ini  pyproject.toml
apps/backend-fastapi/service/alembic/: env.py
apps/backend-fastapi/service/alembic/versions/: 03cee4657a38_.py  0576019ba807_.py  07fcae5c0d37_.py  0d764b3ade86_.py  16240f79befe_.py  1638a5afc5a0_.py  17744c4180a9_.py  19a96c45a0f2_.py  1d9921caf11e_.py  20f8938dbf90_.py  228aa626ea93_.py  29ef78cbf746_.py  2c0a4dd0625c_.py  33e09518dc7f_.py  34f47db0b297_.py  3abf9df0b92c_.py  3b49dbb0f78c_.py  3f5b881d3d0c_.py  3ff026309119_.py  41669308124f_.py  4f8d1f9ebefb_.py  58c15a4657aa_.py  5a9f7fc05b8f_.py  5db01980ac90_.py  634d046db754_.py  647961079d99_.py  67fdec203acf_.py  6fedbb00b4b1_.py  7800657f96c6_.py  7bc6b9ac70c4_.py  80950d847c0f_.py  81620c1490e9_.py  8239f8c8d622_.py  858d644a14b0_.py  88b39d7250c0_.py  892d006bc783_.py  89d5dee52a90_.py  90a681c85638_.py  958a8b416981_.py  9933bb14f690_.py  (+21 more)
apps/backend-fastapi/service/conf/: settings.py
apps/backend-fastapi/service/crud/: bucket.py  campaign.py  filesystem.py  fragment.py  geolocation.py  ipgetter.py  landing.py  media.py  project.py  stream.py  stream_fragment.py
apps/backend-fastapi/service/database/: __init__.py
apps/backend-fastapi/service/database/models/: __init__.py  models.py  schemas.py
apps/backend-fastapi/service/deployment/: pre_start.py
apps/backend-fastapi/service/deployment/docker/: Dockerfile  Dockerfile.server
apps/backend-fastapi/service/services/: api.py  dependencies.py  schemas.py
apps/backend-fastapi/service/services/core/: __init__.py
apps/backend-fastapi/service/tests/services/: test_project.py
apps/backend/service/: Makefile  logging.conf  pyproject.toml  setup.cfg
apps/backend/service/alembic/: env.py
apps/backend/service/alembic/versions/: 0229e8b16ccb_.py  02ac22dbbdfb_.py  02b5209bf490_.py  0f22b27e42c4_.py  114e1b277c9f_.py  117f53523be3_.py  1459539bd7e7_.py  1a2e0dacf904_.py  1a75b63d8367_.py  (+70 more)
apps/backend/service/conf/: settings.py
apps/backend/service/crud/: analytic.py  analytics.py  area.py  bucket.py  campaign.py  client.py  experiment.py  feature_flag.py  feedback.py  filesystem.py  fragment.py  geolocation.py  image_generator.py  ipgetter.py  landing.py  media.py  metric.py  project.py  release_condition.py  stream.py  template.py  user.py  variant.py
apps/backend/service/database/: __init__.py  utils.py
apps/backend/service/deployment/: pre_start.py
apps/backend/service/services/: api.py
apps/backend/service/tests/: conftest.py
apps/backend/service/utils/: lru_cache.py
(+2284 files in other folders)
